name:                LCRSTree
version:             0.1.0.0
synopsis:            A Left-Children-Right-Siblings Tree
description:
    A Left-Children-Right-Siblings tree is a tree that represents a multi-way
    tree (aka, a Rose Tree) in a binary-tree format.

    <https://en.wikipedia.org/wiki/Left-child_right-sibling_binary_tree>

homepage:            https://github.com/pjrt/LCRSTree#readme
license:             BSD3
license-file:        LICENSE
author:              Pedro Rodriguez Tavarez
maintainer:          pedro@pjrt.co
copyright:           2016 Pedro Rodriguez Tavarez
category:            Data
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data.LCRSTree
                     , Data.PathTree
  build-depends:       base >= 4.7 && < 5
                     , containers
  ghc-options:         -Wall
  default-language:    Haskell2010

test-suite LCRSTree-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , LCRSTree
                     , QuickCheck
                     , test-framework
                     , test-framework-quickcheck2
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/pjrt/LCRSTree
